# mcp-saudacao

./: README.md  env.example  mcp.json  pyproject.toml  server.py  setup_jfrog.py
mcp_tools/: README.md  __init__.py  despedir.py  saudar.py
